# scrappy

./: .gitignore  AUDIT.md  LICENSE  README.md  pyproject.toml
examples/: profile.yaml
logics/: instructions.md
logics/architecture/: adr_001_mvp_outil_local_de_veille_et_scoring_d_offres_d_emploi.md
logics/backlog/: item_001_mvp_outil_local_de_veille_et_scoring_d_offres_d_emploi.md  item_002_stabiliser_wttj_algolia_et_review_manuel_xlsx.md  item_003_diagnostiquer_la_limite_de_collecte_wttj.md  item_004_etendre_la_collecte_aux_offres_multi_plateformes.md  item_005_selectionner_et_valider_une_api_tierce_indeed.md  item_006_integrer_l_api_offres_d_emploi_france_travail.md
logics/product/: prod_001_mvp_outil_local_de_veille_et_scoring_d_offres_d_emploi.md
logics/request/: req_000_mvp_job_reviewer.md  req_001_stabilize_wttj_review.md  req_002_diagnose_wttj_collection_limit.md  req_003_multi_platform_job_collection.md  req_004_validate_third_party_indeed_api.md  req_005_integrate_france_travail_jobs_api.md
logics/specs/: spec_001_initial_profile_and_search_criteria.md
logics/tasks/: task_001_mvp_outil_local_de_veille_et_scoring_d_offres_d_emploi.md  task_002_stabiliser_wttj_algolia_et_review_manuel_xlsx.md  task_003_diagnostiquer_la_limite_de_collecte_wttj.md  (+3 more)
scrappy/: __init__.py  __main__.py  cli.py  growth.py  models.py  profile.py  reporting.py  scoring.py  storage.py
tests/: test_cli.py  test_france_travail_connector.py  test_growth.py  test_indeed_connector.py  test_reporting.py  test_scoring.py  test_storage.py  test_wttj_connector.py
(+5 files in other folders)
