[project]
name = "scrappy"
version = "0.1.0"
description = "Local-first job-offer review assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
scrappy = "scrappy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
